[package]
name        = "artishield"
version     = "0.1.0"
edition     = "2021"
description = "Threat monitor & mitigation for arti (Tor Rust client)"
license     = "MIT OR Apache-2.0"
# MSRV matches arti's current requirement
rust-version = "1.77"

[[bin]]
name = "artishield"
path = "src/main.rs"

[lib]
name = "artishield"
path = "src/lib.rs"

# ── Feature flags ─────────────────────────────────────────────────────────────
[features]
default = ["geoip"]

# Compile the real arti integration (requires network at build time for cargo fetch)
arti-hooks = [
    "dep:arti-client",
    "dep:tor-rtcompat",
    "dep:tor-netdir",
    "dep:tor-linkspec",
    "dep:tor-llcrypto",
]

# MaxMind GeoIP support for ASN lookups
geoip = ["dep:maxminddb"]

# ── arti crates (optional — enabled via "arti-hooks" feature) ─────────────────
# All tor-* crates MUST share the same minor version as arti-client.
# Latest stable as of 2025-03: 0.37.0
# "experimental-api" exposes TorClient::dirmgr() which is our main hook.
[dependencies]
arti-client  = { version = "0.37", optional = true, features = [
    "tokio",
    "native-tls",
    "experimental-api",
] }
tor-rtcompat = { version = "0.37", optional = true, features = ["tokio", "native-tls"] }
tor-netdir   = { version = "0.37", optional = true }
tor-linkspec = { version = "0.37", optional = true }
tor-llcrypto = { version = "0.37", optional = true }

# ── async ─────────────────────────────────────────────────────────────────────
tokio   = { version = "1", features = ["full"] }
futures = "0.3"

# ── serde ─────────────────────────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"

# ── logging ───────────────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── IP / GeoIP ────────────────────────────────────────────────────────────────
ipnet      = { version = "2", features = ["serde"] }
maxminddb  = { version = "0.23", optional = true }

# ── SOCKS5 (TimingDetector — probes through arti's SOCKS port) ───────────────
# tokio-socks speaks SOCKS5 to arti's external proxy; no arti-crate dep needed
tokio-socks = "0.5"

# ── storage ───────────────────────────────────────────────────────────────────
rusqlite = { version = "0.37", features = ["bundled"] }

# ── dashboard ─────────────────────────────────────────────────────────────────
axum       = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }

# ── utilities ─────────────────────────────────────────────────────────────────
anyhow    = "1"
chrono    = { version = "0.4", features = ["serde"] }
uuid      = { version = "1",   features = ["v4", "serde"] }
clap      = { version = "4",   features = ["derive"] }

[dev-dependencies]
toml = "0.8"
tokio-test = "0.4"

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = true

maxminddb = { version = "0.24", features = ["async"] }  # offizielle MaxMind Rust-Binding
tokio = { version = "1", features = ["full"] }          # schon drin, aber sicherstellen
serde = { version = "1.0", features = ["derive"] }      # für JSON in API
