[package]
name        = "artishield"
version     = "0.2.1"
edition     = "2021"
description = "Threat monitor & mitigation for arti (Tor Rust client)"
license     = "MIT OR Apache-2.0"
rust-version = "1.85"

[[bin]]
name = "artishield"
path = "src/main.rs"

[lib]
name = "artishield"
path = "src/lib.rs"

# ── Feature flags ─────────────────────────────────────────────────────────────
[features]
default = ["geoip"]

# Real arti integration (requires network at build time for cargo fetch)
arti-hooks = [
    "dep:arti-client",
    "dep:tor-rtcompat",
    "dep:tor-netdir",
    "dep:tor-linkspec",
    "dep:tor-llcrypto",
]

# MaxMind GeoIP support for ASN lookups
geoip = ["dep:maxminddb"]

# Bevy render-graph post-processing plugin
bevy-plugin = [
    "dep:bevy",
    "dep:lru",
    "dep:image",
]

# Bevy egui UI panel (implies bevy-plugin)
bevy-ui = [
    "bevy-plugin",
    "dep:bevy_egui",
]

# ── Dependencies ──────────────────────────────────────────────────────────────
[dependencies]
# --- arti / core project deps ---
arti-client  = { version = "0.37", optional = true, features = ["tokio","native-tls","experimental-api"] }
tor-rtcompat = { version = "0.37", optional = true, features = ["tokio","native-tls"] }
tor-netdir   = { version = "0.37", optional = true }
tor-linkspec = { version = "0.37", optional = true }
tor-llcrypto = { version = "0.37", optional = true }

tokio   = { version = "1", features = ["full"] }
futures = "0.3"

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"

tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

ipnet      = { version = "2", features = ["serde"] }
maxminddb  = { version = "0.23", optional = true }

tokio-socks = "0.5"

# HTTP client — used by feed importer and abuse reporter
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Feed signing: HMAC-SHA256
sha2 = "0.10"
hmac = "0.12"
hex  = "0.4"

rusqlite = { version = "0.37", features = ["bundled"] }

axum       = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }

anyhow    = "1"
chrono    = { version = "0.4", features = ["serde"] }
uuid      = { version = "1",   features = ["v4", "serde"] }
clap      = { version = "4",   features = ["derive"] }

# ── Bevy render + native app (optional) ───────────────────────────────────────
# bevy-plugin:  render node only (no window) — fast compile
# bevy-ui:      full native app with window, PBR, gizmos, egui
bevy = { version = "0.11", default-features = false, features = [
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_winit",
    "bevy_gizmos",
    "bevy_text",
    "default_font",
    "tonemapping_luts",
    "ktx2",
    "zstd",
    "x11",
], optional = true }

# bevy_egui 0.21.x targets Bevy 0.11
bevy_egui = { version = "0.21", optional = true }

# Utilities used by the node implementation
lru   = { version = "0.8",  optional = true }
image = { version = "0.24", optional = true }

# reqwest is now a regular dep (see above); no separate optional entry needed

# ── Profile / build optimization ─────────────────────────────────────────────
[dev-dependencies]
toml       = "0.8"
tokio-test = "0.4"

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = true
